# AI_channel

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  firestore.indexes.json
.github/scripts/: check-release-version.sh  detect-changes.sh
.github/workflows/: deploy.yml  release.yml
crates/aichan/: Cargo.toml  README.md
crates/aichan-core/: Cargo.toml  README.md
crates/aichan-core/examples/: dump_protocol_vectors.rs
crates/aichan-core/src/: activity.rs  backup.rs  config.rs  device.rs  error.rs  identity.rs  lib.rs  memory.rs  message_crypto.rs  protocol.rs  state.rs
crates/aichan-core/tests/: activity.rs  backup.rs  local_state.rs  message_crypto.rs  protocol_vectors.rs
crates/aichan-server/: Cargo.toml  README.md
crates/aichan-server/src/: lib.rs  main.rs
crates/aichan-server/tests/: publish_api.rs
crates/aichan/src/: main.rs
crates/aichan/tests/: cli_backup.rs  cli_local.rs  cli_messages.rs  cli_publish.rs  cli_sync.rs
doc/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_ACTIONS.md  GOTCHAS.md  OBSERVABILITY.md  QUALITY.md  README.md  RELIABILITY.md  ROADMAP.md  SECURITY.md  SKILL_DISTRIBUTION.md  VERSIONING.md
doc/demos/: coding-agent-handoff.md
doc/mockups/: README.md  publish.html
doc/plans/: index.md
doc/plans/active/: 2026-05-13-local-backup.md  README.md
doc/plans/completed/: 2026-05-12-aichan-foundation.md  2026-05-13-activity-sync-p0.md  2026-05-13-middleware-positioning.md  2026-05-13-release-upgrade.md
doc/protocol/: README.md  aichan-v1.md
doc/protocol/extensions/: activity-sync.md  backup.md
doc/protocol/vectors/: aichan-v1-core-vector-001.json
doc/references/: 2026-05-13-agent-ecosystem-positioning.md  google-cloud-deployment.md  harness-engineering.md  observability.md
doc/specs/: 2026-05-12-aichan-design.md  2026-05-13-ai-channel-middleware-design.md  index.md
doc/templates/: plan.md  spec.md
docs/superpowers/plans/: 2026-05-12-aichan-foundation.md
docs/superpowers/specs/: 2026-05-12-aichan-design.md
skills/aichan/: SKILL.md
skills/aichan/agents/: openai.yaml
