[workspace]
members = [
  "crates/aichan-core",
  "crates/aichan",
  "crates/aichan-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aftershower/AI_channel"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
base64 = "0.22"
blake3 = "1"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"
predicates = "3"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
