[package]
name = "aichan-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
blake3.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
