[package]
name = "aichan-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aichan-core = { path = "../aichan-core" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
tempfile.workspace = true
