[package]
name = "aichan-server"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[dependencies]
aichan-core = { path = "../aichan-core" }
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
tempfile.workspace = true
