[package]
name = "aichan"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aichan-core = { path = "../aichan-core" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
aichan-server = { path = "../aichan-server" }
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
